--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
 title: Muhamad Azmi # your name (or website title) here
 logo: "/images/photo_profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
   <br><br>
-  Second description 
+  Saya adalah statistisi dengan passion pada data dan informasi. Saya adalah orang yang terorganisir dengan kecenderungan untuk perhatian pada detail. Saat ini saya sedang mencari peran data analyst/scientist untuk perkembangan karir dan finansial saya. Saya bertekad untuk memberikan kontribusi yang baik bagi client-client saya, insyaa Allah. 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/m-azmi-rr1417/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
