--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,6 @@ description: > # your text below (remove <br> elements if you don't need line br
   Saya adalah statistisi dengan passion pada data dan informasi. Saya adalah orang yang terorganisir dengan kecenderungan untuk perhatian pada detail. Saat ini saya sedang mencari peran data analyst/scientist untuk perkembangan karir saya. 
   <br><br>
   <a href="https://www.linkedin.com/in/m-azmi-rr1417/">View My LinkedIn Profile</a>
+  
+theme: jekyll-theme-minimal
+google_analytics: UA-000000-0 # your Google Analytics tracking ID here
